// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackDetails /> should render with content pack 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-9 col-sm-offset-1"
  >
    <div
      id="content-pack-details"
    >
      <h2>
        Details
      </h2>
      <br />
      <div>
        <dl
          className="deflist"
        >
          <dt>
            Version:
          </dt>
           
          <dd>
            1
          </dd>
          <dt>
            Name:
          </dt>
           
          <dd>
            UFW Grok Patterns
             
          </dd>
          <dt>
            Summary:
          </dt>
           
          <dd>
            This is a summary
             
          </dd>
          <dt>
            Vendor:
          </dt>
           
          <dd>
            graylog.com
             
          </dd>
          <dt>
            URL:
          </dt>
           
          <dd>
            <a
              href="www.graylog.com"
            >
              www.graylog.com
            </a>
             
          </dd>
          <span>
            <dt>
              ID:
            </dt>
             
            <dd>
              <code>
                1
              </code>
            </dd>
          </span>
          <span>
            <dt>
              Parameters:
            </dt>
             
            <dd>
              0
            </dd>
          </span>
          <span>
            <dt>
              Entities:
            </dt>
             
            <dd>
              0
            </dd>
          </span>
        </dl>
      </div>
      <div>
        <h2>
          Description
        </h2>
        <br />
        <div
          className="Well-sc-19gs1oc-0 kezSPd well"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Grok Patterns to extract informations from UFW logfiles</p>",
              }
            }
          />
        </div>
      </div>
      <br />
      <br />
      <br />
    </div>
  </div>
</div>
`;

exports[`<ContentPackDetails /> should render with content pack without a description 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-9 col-sm-offset-1"
  >
    <div
      id="content-pack-details"
    >
      <h2>
        Details
      </h2>
      <br />
      <div>
        <dl
          className="deflist"
        >
          <dt>
            Version:
          </dt>
           
          <dd />
          <dt>
            Name:
          </dt>
           
          <dd>
             
          </dd>
          <dt>
            Summary:
          </dt>
           
          <dd>
            This is a summary
             
          </dd>
          <dt>
            Vendor:
          </dt>
           
          <dd>
            graylog.com
             
          </dd>
          <dt>
            URL:
          </dt>
           
          <dd>
            <a
              href="www.graylog.com"
            >
              www.graylog.com
            </a>
             
          </dd>
          <span>
            <dt>
              ID:
            </dt>
             
            <dd>
              <code>
                1
              </code>
            </dd>
          </span>
          <span>
            <dt>
              Parameters:
            </dt>
             
            <dd>
              0
            </dd>
          </span>
          <span>
            <dt>
              Entities:
            </dt>
             
            <dd>
              0
            </dd>
          </span>
        </dl>
      </div>
      <br />
      <br />
      <br />
    </div>
  </div>
</div>
`;
